# nervusdb-mcp

./: .dependency-cruiser.cjs  .dockerignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  CHANGELOG.md  CLI_USAGE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.ci-test  INSTALL.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-cypher-count.ts  test-java-graph.ts  tsconfig.build.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit  pre-push
crates/napi-bindings/: Cargo.toml
crates/napi-bindings/src/: lib.rs
crates/parser/: Cargo.toml  LANGUAGE_SUPPORT.md
crates/parser/src/: ext_to_lang.rs  extractor.rs  language.rs  language_manager.rs  lib.rs  parser.rs  types.rs
crates/parser/src/queries/: mod.rs
crates/parser/src/strategies/: c_lang.rs  cpp_lang.rs  css.rs  go_lang.rs  java.rs  mod.rs  python.rs  rust_lang.rs  solidity.rs  swift.rs  typescript.rs  vue.rs
crates/parser/tests/: multi_language_test.rs
scripts/: configure-mcp.sh  release.sh  test-mcp.sh
src/cli/: index.ts
src/domain/fingerprint/: errors.ts  fingerprintService.ts  index.ts
src/domain/indexing/: index.ts  indexingService.ts
src/domain/migration/: index.ts  schemaMigrator.ts
src/domain/parsing/: astParser.ts  multiLanguageParser.ts
src/domain/query/: index.ts  queryBuilder.ts  queryExecutor.ts  queryService.ts
src/domain/shared/: errors.ts  gitFingerprint.ts
src/domain/types/: codeEntity.ts  codeGraph.ts  indexMetadata.ts
src/server/: index.ts  stdio.ts
src/services/: callHierarchyBuilder.ts  codeSmellDetector.ts  definitionLocator.ts  documentationGenerator.ts  impactAnalyzer.ts  indexMaintenanceService.ts  projectService.ts  refactoringSuggester.ts  referencesFinder.ts  relatedFilesScorer.ts  workflowService.ts
src/tools/: code.ts  db.ts  index.ts  project.ts  workflow.ts
src/utils/: errorHandler.ts  errorMapping.ts  logger.ts
tests/: sanity.spec.ts
tests/domain/fingerprint/: fingerprintService.spec.ts
tests/domain/indexing/: indexingService.spec.ts
tests/domain/parsing/: astParser.spec.ts  multiLanguageParser.spec.ts
tests/domain/query/: queryBuilder.spec.ts  queryExecutor.spec.ts  queryService.spec.ts
tests/fixtures/multi-language/: sample.go  sample.java  sample.py  sample.rs  sample.ts
tests/manual/: README.md  test-default-config.mjs  test-indexing.mjs  test-repomix.mjs
tests/services/: callHierarchyBuilder.spec.ts  codeSmellDetector.spec.ts  definitionLocator.spec.ts  documentationGenerator.spec.ts  impactAnalyzer.spec.ts  indexMaintenanceService.spec.ts  projectService.spec.ts  refactoringSuggester.spec.ts  referencesFinder.spec.ts  relatedFilesScorer.spec.ts  workflowService.spec.ts
tests/tools/: tools.spec.ts  workflow.spec.ts
tests/utils/: errorHandler.spec.ts  errorMapping.spec.ts  logger.spec.ts
