[workspace]
members = [
    "crates/parser",
    "crates/napi-bindings"
]
resolver = "2"

[workspace.dependencies]
tree-sitter = "0.23"
tree-sitter-typescript = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = "2.16"
napi-derive = "2.16"
napi-build = "2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
